# obsidian-RAG

./: .gitignore  README.md  app.py  environment.yaml  pyproject.toml  sample.env
RAG/: faiss_index.py  query.py
loader/: markdown.py
